인프런 서버 다운되기 전까지

--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
       </section>
       <section id="scroll-section-3" class="scroll-section">
          <p class="mid-message">
-            <strong>1:1 재무상담</strong><br />
-            당신의 모든 자산고민<br />
-            시원하게 해결할 수 있는 방법
+            <strong>사이다경제 마스코트</strong><br />
+            톡 하고 시원한<br /> 탄산이와 탄소
          </p>
          <canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
          <p class="canvas-caption">
