--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Cidemics Pro</title>
+   <title>Cidemics</title>
    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/default.css">
    <link rel="stylesheet" href="css/new_main.css">
@@ -21,14 +21,14 @@
       </nav>
       <nav class="local-nav">
          <div class="local-nav-links">
-            <a href="#" class="product-name">Cidemics Pro</a>
+            <a href="#" class="product-name">Cidemics</a>
             <a href="#">소개</a>
             <a href="#">클래스</a>
             <a href="#">재무상담</a>
          </div>
       </nav>
       <section id="scroll-section-0" class="scroll-section">
-         <h1>Cidermics Pro</h1>
+         <h1>Cidermics</h1>
          <div class="sticky-elem sticky-elem-canvas">
             <canvas id="video-canvas-0" width="1920" height="1080"></canvas>
          </div>
