--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime deserunt deleniti qui assumenda sapiente, perferendis doloremque ab! Et odio numquam eius error, beatae, cupiditate neque earum enim doloremque obcaecati reiciendis consectetur quos quasi consequuntur deserunt eveniet minus sequi nobis. Impedit ut quia vero nihil alias amet unde earum sed, repellendus ea nesciunt quod nobis necessitatibus architecto repudiandae natus, eum consequuntur. Maiores cumque sit illo repellendus necessitatibus non, harum facere doloremque expedita labore. Minima, eius vitae. Suscipit velit quod sit, ullam et quas similique voluptates eligendi ipsa placeat non voluptatum numquam tempore obcaecati saepe exercitationem, sapiente nulla eum recusandae! Sit, laudantium!
          </p>
       </section>
+      <section class="normal-content">
+         <p class="canvas-caption">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat nulla perspiciatis autem cum, nihil eum impedit quibusdam. Quaerat expedita qui deleniti incidunt ipsa? Fugit fugiat rerum temporibus ipsa tenetur perferendis molestiae, aperiam hic quasi assumenda provident aut dignissimos laudantium saepe rem fuga ut debitis enim expedita quisquam omnis, quas tempora. Quas mollitia error voluptate aliquid quidem? Necessitatibus nostrum sit enim ab, esse iusto? Quasi quia dolores aut in consequatur porro quisquam doloribus velit cumque, ullam amet asperiores minima iste delectus adipisci itaque. Enim aperiam saepe nulla neque harum dicta earum quis qui laudantium ad ipsum, pariatur animi incidunt architecto asperiores.
+         </p>
+      </section>
       <footer class="footer">
          2021, HyunJi KIM.
       </footer>
