두번째 동영상까지 변경

--- a/index.html
+++ b/index.html
@@ -63,18 +63,19 @@
          <div class="sticky-elem main-message a">
             <p>
                <small>온라인/오프라인</small>
-               다양한 경제 클래스
+               다양한 경제 클래스<br />제공
             </p>
          </div>
          <div class="sticky-elem desc-message b">
             <p>
-               부동산 / 재테크 / 미술품투자 / 주식 이 모든 다양한 클래스를 사이다경제에서 한 번에, 온라인 오프라인 원하는 수업으로 골라 들을 수 있는 유일의 경제플랫폼
+               부동산 / 재테크 / 미술품투자 / 주식 이 모든 다양한 클래스를 사이다경제에서 한 번에, 쉽게 <br />
+               온라인 오프라인 원하는 수업으로 골라 들을 수 있는 유일의 경제플랫폼
             </p>
             <div class="pin"></div>
          </div>
          <div class="sticky-elem desc-message c">
             <p>
-               디자인 앤 퀄리티 오브 사이다경제,<br />
+               경제를 이롭게,<br />
                메이드 인 사이다경제
             </p>
             <div class="pin"></div>
